chore: prepared 1.6.0-SNAPSHOT (#81800)

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -56,7 +56,7 @@ IOM_DBACCOUNT_IMAGE=docker.tools.intershop.com/iom/intershophub/iom-dbaccount:1.
 # local image:                      iom:4.1.2
 # locally built project image:      prj-iom:4.1.2-1.2.0.0-SNAPSHOT
 # IOM release from ISH registry:    docker.intershop.de/intershophub/iom:4.1.2
-IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.5.0
+IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.6.0-SNAPSHOT
 
 ################################################################################
 # Database Configuration
