chore: adapted for devenv-4-iom 2.6.0 (#110)

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -8,6 +8,8 @@
 # has to be updated. Only the settings are taken over during this process. All
 # additional comments you may have added to the file will be lost.
 #
+# File was generated with version 2.6.0 of devenv-4-iom.
+#
 ################################################################################
 
 # This ID has to be defined before using this configuration the first time. All
@@ -21,6 +23,11 @@
 # - docker
 # - kube
 ID="iomblueprint"
+
+# kubectl is able to work with different Kubernetes clusters. The Kubernetes
+# context determines, which cluster is controlled by kubectl. This configuration
+# variable defines the Kubernetes context to be used by devenv-4-iom.
+KUBERNETES_CONTEXT="docker-desktop"
 
 ################################################################################
 # Docker Image Settings
@@ -36,26 +43,50 @@ IMAGE_PULL_POLICY=IfNotPresent
 # Name of Kubernetes secret to be used, if authentication at a private Docker
 # registry is required. The secret has to be created manually in default
 # namespace.
+# It's possible to list several pull-secrets separated by comma.
 # More information about pull secrets can be found at:
 # - https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 # - https://docs.microsoft.com/en-us/azure/container-registry/container-registry-auth-kubernetes
 IMAGE_PULL_SECRET=
 
 # postgres image (name:tag)
+# example:                  postgres:11
 DOCKER_DB_IMAGE=postgres:15
 
-# mailhog image (name:tag)
-MAILHOG_IMAGE=mailhog/mailhog
+# mail-server image (name:tag)
+# example:                  axllent/mailpit
+MAILSRV_IMAGE=axllent/mailpit
 
 # iom dbaccount image (name:tag)
-# release from ISH Docker registry
+# examples:
+# local image:                      iom-dbaccount:1.5.0
+# release from ISH Docker registry: docker.tools.intershop.com/iom/intershophub/iom-dbaccount:1.5.0
 IOM_DBACCOUNT_IMAGE=docker.tools.intershop.com/iom/intershophub/iom-dbaccount:2.0.0
 
-# iom image (name:tag)
+# iom config image (name:tag)
 # examples:
-# local image:                      iom:4.1.2
-# locally built project image:      prj-iom:4.1.2-1.2.0.0-SNAPSHOT
-# IOM release from ISH registry:    docker.intershop.de/intershophub/iom:4.1.2
+# local image:                      iom-config:3.7.0.0
+# locally built project image:      prj-iom-config:3.7.0.0-1.2.0.0-SNAPSHOT
+# IOM release from ISH registry:    docker.tools.intershop.com/iom/intershophub/iom-config:3.7.0.0
+IOM_CONFIG_IMAGE=
+
+# iom app image (name:tag)
+# examples:
+# local image:                      iom-app:3.7.0.0
+# locally built project image:      prj-iom-app:3.7.0.0-1.2.0.0-SNAPSHOT
+# IOM release from ISH registry:    docker.tools.intershop.com/iom/intershophub/iom-app:3.7.0.0
+IOM_APP_IMAGE=
+
+# iom image (name:tag)
+# beginning with IOM 4 the distribution model of IOM was changed from two to one
+# docker image. devenv-4-iom can be used with both types of IOM, double and
+# single image distribution.
+# If IOM_IMAGE is set, the properties IOM_CONFIG_IMAGE and IOM_APP_IMAGE will
+# be ignored.
+# examples:
+# local image:                      iom:4.1.0
+# locally built project image:      prj-iom:1.2.0-SNAPSHOT
+# IOM release from ISH registry:    docker.tools.intershop.com/iom/intershophub/iom:4.1.0
 IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.6.0-SNAPSHOT
 
 ################################################################################
@@ -87,6 +118,15 @@ OMS_DB_SEARCHPATH="customer, oms, omt, product, admin, bizconf, testcases"
 OMS_DB_USER="oms_user"
 OMS_DB_PASS="oms_pw"
 OMS_DB_NAME="oms_db"
+
+# Enable/Disable SQL-Hashes
+# During image creation, hashes are created and stored within the image, that
+# are stored within the DB after according SQL-scripts were executed, to avoid
+# repeated execution of SQL-scripts. In a development environment these hashes
+# must be ignored. But there are special cases, that need the posibility of
+# configuration of this feature.
+# Allowed values are true|false
+OMS_DB_SQLHASH="false"
 
 ################################################################################
 # IOM Runtime Configuration
@@ -123,16 +163,13 @@ JBOSS_XA_POOLSIZE_MIN="10"
 JBOSS_XA_POOLSIZE_MAX="50"
 
 # IOM >= 4.3 supports Single Sign On (SSO).
-# Devenv-4-iom allows the usage of SSO during development. There are two
-# properties, to control SSO.
+# Devenv-4-iom allows the usage of SSO during development. 
 # Allowed values are true|false
-# SSO_ENABLED="true"
-
+SSO_ENABLED="false"
 # Allowed values are azure-ad|keycloak
-# SSO_TYPE="azure-ad"
-
+SSO_TYPE="azure-ad"
 # Set a JSON structure similar to oidc.json,
-# https://docs.wildfly.org/26/Admin_Guide.html#Elytron_OIDC_Client
+# see: https://docs.wildfly.org/26/Admin_Guide.html#Elytron_OIDC_Client
 # SSO_OIDC_CONFIG='{
 #     "client-id" : "00000000-0000-0000-0000-000000000000",
 #     "credentials": {
@@ -142,6 +179,16 @@ JBOSS_XA_POOLSIZE_MAX="50"
 #     "public-client" : "false",
 #     "ssl-required" : "EXTERNAL"
 # }'
+
+# IOM 5 and newer sends metrics data of Wildfly and IOM to an endpoint, which
+# has to be compatible with OpenTelemetry format. This endpoint is defined by
+# the OTEL_COLLECTOR property.
+# Example:
+# OTEL_COLLECTOR="http://MyMacPro:4318/v1/metrics"
+# If the property is empty, metrics data are not sent it all.
+# For more information, please read
+# https://github.com/intershop/devenv-4-iom/blob/main/doc/07_metrics.md
+OTEL_COLLECTOR=""
 
 ################################################################################
 # Database settings (not applied to external database)
@@ -237,6 +284,15 @@ CUSTOM_SQLCONF_DIR="target/sql-config"
 # Development of custom json-config
 # See: devenv-cli.sh apply json-config --help
 CUSTOM_JSONCONF_DIR=""
+
+################################################################################
+# Test related settings
+################################################################################
+
+# When starting the IOM application server and this property is set to true,
+# a file testframework-config.user.yaml will be created in the directory holding
+# the current devenv configuration. 
+CREATE_TEST_CONFIG="true"
 
 ################################################################################
 # Access to developer VM
