--- a/devenv-4-iom/templates/iom.yml.template
+++ b/devenv-4-iom/templates/iom.yml.template
@@ -127,12 +127,10 @@ ${ShareDirYml____}          mountPath: /var/opt/share
             value: 'http://${HostIom}:${PORT_IOM_SERVICE}'
           - name: OMS_EXEC_BACKEND_APPS
             value: 'true'
-          - name: OMS_SHARE
-            value: '${OmsShareDir}'
           - name: OMS_SMTP_HOST
-            value: 'mailhog-service'
+            value: 'mailsrv-service'
           - name: OMS_SMTP_PORT
-            value: '${PORT_MAILHOG_SMTP_SERVICE}'
+            value: '${PORT_MAILSRV_SMTP_SERVICE}'
         lifecycle:
           postStart:
             exec:
