based on IOM 1.6.0

--- a/devenv.project.properties
+++ b/devenv.project.properties
@@ -87,7 +87,7 @@ IOM_APP_IMAGE=
 # local image:                      iom:4.1.0
 # locally built project image:      prj-iom:1.2.0-SNAPSHOT
 # IOM release from ISH registry:    docker.tools.intershop.com/iom/intershophub/iom:4.1.0
-IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.6.0-SNAPSHOT
+IOM_IMAGE=docker.io/library/iom-blueprint-project-iom:1.6.0
 
 ################################################################################
 # Database Configuration
