fix: velocity templates must not use removed api

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <artifactId>resteasy-jackson2-provider</artifactId>
             <scope>provided</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<scope>provided</scope>
+		</dependency>
         
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
