Squashed 'devenv-4-iom/' changes from 43c9e254..03a5599f
03a5599f docs: added release notes for 2.6.1 (#45)
6fdbef94 chore: release version 2.6.1
0d82cce3 chore: release version 2.6.0 (#42)
e3cb313a chore: release version 2.5.0 (#40)

git-subtree-dir: devenv-4-iom
git-subtree-split: 03a5599f9720d64ae8deae24855fa71b48cf402f

--- a/templates/apply-sql.yml.template
+++ b/templates/apply-sql.yml.template
@@ -43,5 +43,5 @@ spec:
       volumes:
       - name: sql-dir-volume
         hostPath:
-          path: "${sqlDir}"
+          path: "${MOUNT_PREFIX}${sqlDirAbs}"
   backoffLimit: 0
